//
//  FormAccessibility.swift
//  FormValidatorSwift
//
//  Created by Aaron McTavish on 06/01/2017.
//  Copyright © 2017 ustwo Fampany Ltd. All rights reserved.
//

import Foundation

enum FormAccessibility {
    
    enum Identifiers {
        static let EmailLabel       = "EMAIL_LABEL"
        static let EmailTextField   = "EMAIL_TEXTFIELD"
        
        static let ErrorLabel       = "ERROR_LABEL"
        
        static let NameLabel        = "NAME_LABEL"
        static let NameTextField    = "NAME_TEXTFIELD"
        
        static let TitleLabel       = "TITLE_LABEL"
        static let TitleTextField   = "TITLE_TEXTFIELD"
        
        static let SubmitButton     = "SUBMIT_BUTTON"
    }
    
}
